--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   </head>
   <body>
     <div class="image">
-      <div class="image-top"></div>
+      <div></div>
       <h1>BIG TEXT</h1>
-      <div class="image-bottom"></div>
+      <div>
+        <h4>Photo by pexels.com/@inspiredimages</h4>
+      </div>
     </div>
     <div class="main">
       <div>
