--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <div class="image">
       <div></div>
-      <h1>BIG TEXT</h1>
+      <h1><img src="icon.png" /><span>BIG TEXT</span></h1>
       <div>
-        <h4>Photo by pexels.com/@inspiredimages</h4>
+        <h4>Photo by pexels.com/@inspiredimages<br />Icon by Gregor Cresnar</h4>
       </div>
     </div>
     <div class="main">
