Tweak logo styles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="image">
       <div></div>
-      <h1><img src="icon.png" /><span>BIG TEXT</span></h1>
+      <h1><img src="icon.png" />Logo</h1>
       <div>
         <h4>Photo by pexels.com/@inspiredimages<br />Icon by Gregor Cresnar</h4>
       </div>
