Style main section, except form

--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
     </div>
     <div class="main">
       <div>
-        <h2>Top Text</h2>
+        <h2>
+          This is not a real online service! Lorem ipsum dolor sit amet
+          <em>consectetur</em>, adipisicing elit. Necessitatibus, commodi!
+        </h2>
+        <h2>
+          <strong>Sign up now to get started.</strong> You know you want to.
+        </h2>
       </div>
       <form action="#">
-        <h2>intro to form</h2>
+        <h2>Let's do this!</h2>
         <div>
           <label for=""><input type="" /></label>
           <label for=""><input type="" /></label>
@@ -40,8 +46,8 @@
         </div>
       </form>
       <div>
-        <button>Submit</button>
-        <h3>Bottom Text</h3>
+        <button>Create Account</button>
+        <h3>Already have an account? <a href="#">Log in</a></h3>
       </div>
     </div>
   </body>
