Add show password checkbox

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
               required
           /></label>
         </div>
+
+        <div>
+          <label for="showPass"
+            ><input id="showPass" type="checkbox" />Show password</label
+          >
+        </div>
       </form>
       <div>
         <button id="submit">Create Account</button>
