--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Let's do this!</h2>
         <div>
           <label for="firstName"
-            >FIRST NAME<input type="text" id="firstName" required
+            >FIRST NAME<br /><input type="text" id="firstName" required
           /></label>
           <label for="lastName"
             >LAST NAME<br /><input type="text" id="lastName" required
@@ -47,15 +47,15 @@
             >EMAIL ADDRESS<br /><input type="email" id="email" required
           /></label>
           <label for="phoneNumber"
-            >PHONE NUMBER<input type="tel" id="phoneNumber"
+            >PHONE NUMBER<br /><input type="tel" id="phoneNumber"
           /></label>
         </div>
         <div>
           <label for="password"
-            >PASSWORD<input type="password" id="password" required
+            >PASSWORD<br /><input type="password" id="password" required
           /></label>
           <label for="confirmPass"
-            ><span id="passWarning"></span>CONFIRM PASSWORD<input
+            ><span id="passWarning"></span>CONFIRM PASSWORD<br /><input
               type="password"
               id="confirmPass"
               required
